--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -1,133 +1,140 @@
-@import "normalize.css/normalize.css";
-@import "antd/dist/antd.css";
+@import 'normalize.css/normalize.css';
+@import 'antd/dist/antd.css';
 
 /* 样式的重置 */
-body, html, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, header, menu, section, p, input, td, th, ins {
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+header,
+menu,
+section,
+p,
+input,
+td,
+th,
+ins {
   padding: 0;
   margin: 0;
 }
-
-ul, ol, li {
+ul,
+ol,
+li {
   list-style: none;
 }
-
 a {
+  color: #666666;
   text-decoration: none;
-  color: #666;
 }
-
 a:hover {
-  color: #666;
+  color: #666666;
   text-decoration: underline;
 }
-
-i, em {
+i,
+em {
   font-style: normal;
 }
-
-input, textarea, button, select, a {
+input,
+textarea,
+button,
+select,
+a {
+  border: none;
   outline: none;
-  border: none;
 }
-
 table {
-  border-collapse: collapse;
   border-spacing: 0;
+  border-collapse: collapse;
 }
-
 img {
-  border: none;
   vertical-align: middle;
+  border: none;
 }
 
 /* 全局样式 */
-body, textarea, select, input, button {
-  font-size: 12px;
-  color: #333;
+body,
+textarea,
+select,
+input,
+button {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #333333;
   background-color: #f5f5f5;
 }
-
 .text-nowrap {
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-
 .wrap-v1 {
   width: 1100px;
   margin: 0 auto;
 }
-
 .wrap-v2 {
   width: 980px;
   margin: 0 auto;
 }
-
 .sprite_01 {
-  background: url(../img/sprite_01.png) no-repeat 0 9999px;
+  background: url('../img/sprite_01.png') no-repeat 0 9999px;
 }
-
 .sprite_02 {
-  background: url(../img/sprite_02.png) no-repeat 0 9999px;
+  background: url('../img/sprite_02.png') no-repeat 0 9999px;
 }
-
 .sprite_covor {
-  background: url(../img/sprite_cover.png) no-repeat 0 9999px;
+  background: url('../img/sprite_cover.png') no-repeat 0 9999px;
 }
-
 .sprite_icon {
-  background: url(../img/sprite_icon.png) no-repeat 0 9999px;
+  background: url('../img/sprite_icon.png') no-repeat 0 9999px;
 }
-
 .sprite_icon2 {
-  background: url(../img/sprite_icon2.png) no-repeat 0 9999px;
+  background: url('../img/sprite_icon2.png') no-repeat 0 9999px;
 }
-
 .sprite_icon3 {
-  background: url(../img/sprite_icon3.png) no-repeat 0 9999px;
+  background: url('../img/sprite_icon3.png') no-repeat 0 9999px;
 }
-
 .sprite_button {
-  background: url(../img/sprite_button.png) no-repeat 0 9999px;
+  background: url('../img/sprite_button.png') no-repeat 0 9999px;
 }
-
 .sprite_button2 {
-  background: url(../img/sprite_button2.png) no-repeat 0 9999px;
+  background: url('../img/sprite_button2.png') no-repeat 0 9999px;
 }
-
 .sprite_table {
-  background: url(../img/sprite_table.png) no-repeat 0 9999px;
+  background: url('../img/sprite_table.png') no-repeat 0 9999px;
 }
-
 .sprite_playbar {
-  background: url(../img/playbar_sprite.png) no-repeat 0 9999px;
+  background: url('../img/playbar_sprite.png') no-repeat 0 9999px;
 }
-
 .sprite_playlist {
-  background: url(../img/playlist_sprite.png) no-repeat 0 9999px;
+  background: url('../img/playlist_sprite.png') no-repeat 0 9999px;
 }
-
 .image_cover {
   position: absolute;
-  left: 0;
-  right: 0;
   top: 0;
+  right: 0;
   bottom: 0;
+  left: 0;
   text-indent: -9999px;
-  background: url(../img/sprite_cover.png) no-repeat -145px -57px;
+  background: url('../img/sprite_cover.png') no-repeat -145px -57px;
 }
-
-
 .ant-message .ant-message-notice-content {
   position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
   bottom: 60px;
-  background-color: rgba(0, 0, 0, .5);
-  color: #fff;
+  left: 50%;
+  color: #ffffff;
+  background-color: rgb(0 0 0 / 50%);
+  transform: translateX(-50%);
 }
-
 span:hover.link {
   text-decoration: underline;
   cursor: pointer;
