feat: 🚀 完成redux配置与轮播图

--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -75,11 +75,11 @@ button {
   white-space: nowrap;
 }
 .wrap-v1 {
-  width: 1100px;
+  width: 100%;
   margin: 0 auto;
 }
 .wrap-v2 {
-  width: 980px;
+  width: 80vw;
   margin: 0 auto;
 }
 .sprite_01 {
