--- a/src/views/discover/index.less
+++ b/src/views/discover/index.less
@@ -8,7 +8,7 @@
   position: relative;
   top: -4px;
   display: flex;
-  padding-left: 155px;
+  padding-left: 245px;
   font-size: 12px;
   .item {
     a {
@@ -25,5 +25,11 @@
         border-radius: 20px;
       }
     }
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .TopMenu {
+    padding-left: 0 !important;
   }
 }
