--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -1,5 +1,5 @@
 .HeaderWrapper {
-  width: 100vw;
+  width: 100%;
   height: 75px;
   background-color: #242424;
   .content {
@@ -104,7 +104,7 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1300px) {
   .content {
     width: 90% !important;
   }
