--- a/src/components/RcmHeader/index.less
+++ b/src/components/RcmHeader/index.less
@@ -16,9 +16,12 @@
       font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;
       font-size: 20px;
       line-height: 33px;
+      white-space: nowrap;
     }
     .keyword {
       display: flex;
+      flex-wrap: nowrap;
+      white-space: nowrap;
       .item {
         .divider {
           margin: 0 15px;
