--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -18,9 +18,11 @@
       }
       .select-list {
         display: flex;
+        flex-wrap: nowrap;
         font-size: 14px;
         line-height: 70px;
         text-align: center;
+        white-space: nowrap;
         .select-item {
           position: relative;
           a {
