--- a/src/views/discover/index.less
+++ b/src/views/discover/index.less
@@ -1,33 +1,47 @@
 .DiscoverWrapper {
   .top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100vw;
     height: 30px;
+    margin: 0 auto;
+    overflow: hidden;
+    line-height: 30px;
     background-color: #c20c0c;
-  }
-}
-.TopMenu {
-  position: relative;
-  top: -4px;
-  display: flex;
-  padding-left: 245px;
-  font-size: 12px;
-  .item {
-    a {
-      display: inline-block;
-      height: 20px;
-      padding: 0 13px;
-      margin: 7px 17px 0;
-      line-height: 20px;
-      color: #ffffff;
-      &:hover,
-      &.active {
-        text-decoration: none;
-        background-color: #9b0909;
-        border-radius: 20px;
+    .TopMenu {
+      position: relative;
+      top: -4px;
+      display: flex;
+      flex-wrap: nowrap;
+      padding-left: 29.5vw;
+      font-size: 12px;
+      white-space: nowrap;
+      .item {
+        a {
+          display: inline-block;
+          height: 20px;
+          padding: 0 13px;
+          margin: 7px 17px 0;
+          line-height: 20px;
+          color: #ffffff;
+          &:hover,
+          &.active {
+            text-decoration: none;
+            background-color: #9b0909;
+            border-radius: 20px;
+          }
+        }
       }
     }
   }
 }
 
+@media screen and (max-width: 1280px) {
+  .TopMenu {
+    padding-left: 19.5vw !important;
+  }
+}
 @media screen and (max-width: 870px) {
   .TopMenu {
     padding-left: 0 !important;
