--- a/src/views/discover/components/recommend/index.less
+++ b/src/views/discover/components/recommend/index.less
@@ -1,9 +1,9 @@
-.RecommendWraper {
+.RecommendWarper {
   .Content {
     display: flex;
     background-color: #ffffff;
     .RecommendLeft {
-      width: 729px;
+      width: 60vw !important;
       padding: 20px;
     }
     .RecommendRight {
