--- a/src/components/RcmHeader/index.less
+++ b/src/components/RcmHeader/index.less
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 60vw;
   height: 33px;
   padding: 0 10px 4px 34px;
   margin: 10px;
-  background-position: -225px -156px;
+  background-position: -225px -156px !important;
   border-bottom: 2px solid #c10d0c;
   .left {
     display: flex;
@@ -21,6 +22,8 @@
     .keyword {
       display: flex;
       flex-wrap: nowrap;
+      font-size: 12px;
+      color: #666666;
       white-space: nowrap;
       .item {
         .divider {
