--- a/src/components/RcmHeader/index.less
+++ b/src/components/RcmHeader/index.less
@@ -2,30 +2,36 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 60vw;
+  width: 100%;
   height: 33px;
   padding: 0 10px 4px 34px;
   margin: 10px;
   background-position: -225px -156px !important;
   border-bottom: 2px solid #c10d0c;
+
   .left {
     display: flex;
     align-items: center;
     line-height: 33px;
+
     .title {
       margin-right: 20px;
+      /* stylelint-disable-next-line string-quotes */
       font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;
       font-size: 20px;
       line-height: 33px;
       white-space: nowrap;
     }
+
     .keyword {
       display: flex;
       flex-wrap: nowrap;
       font-size: 12px;
       color: #666666;
       white-space: nowrap;
+
       .item {
+        /* stylelint-disable-next-line rule-empty-line-before */
         .divider {
           margin: 0 15px;
           color: #cccccc;
@@ -33,9 +39,11 @@
       }
     }
   }
+
   .right {
     display: flex;
     align-items: center;
+
     .icon {
       display: inline-block;
       width: 12px;
