--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,4 +1,5 @@
 /* 样式的重置 */
+
 body,
 html,
 h1,
@@ -24,23 +25,28 @@ ins {
   padding: 0;
   margin: 0;
 }
+
 ul,
 ol,
 li {
   list-style: none;
 }
+
 a {
   color: #666666;
   text-decoration: none;
 }
+
 a:hover {
   color: #666666;
   text-decoration: underline;
 }
+
 i,
 em {
   font-style: normal;
 }
+
 input,
 textarea,
 button,
@@ -49,16 +55,19 @@ a {
   border: none;
   outline: none;
 }
+
 table {
   border-spacing: 0;
   border-collapse: collapse;
 }
+
 img {
   vertical-align: middle;
   border: none;
 }
 
 /* 全局样式 */
+
 body,
 textarea,
 select,
@@ -69,52 +78,67 @@ button {
   color: #333333;
   background-color: #f5f5f5;
 }
+
 .text-nowrap {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .wrap-v1 {
   width: 100%;
   margin: 0 auto;
 }
+
 .wrap-v2 {
   width: 80vw;
   margin: 0 auto;
 }
+
 .sprite_01 {
-  background: url('@/assets/img/sprite_01.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_01.png") no-repeat 0 9999px;
 }
+
 .sprite_02 {
-  background: url('@/assets/img/sprite_02.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_02.png") no-repeat 0 9999px;
 }
-.sprite_covor {
-  background: url('@/assets/img/sprite_cover.png') no-repeat 0 9999px;
+
+.sprite_cover {
+  background: url("@/assets/img/sprite_cover.png") no-repeat 0 9999px;
 }
+
 .sprite_icon {
-  background: url('@/assets/img/sprite_icon.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon.png") no-repeat 0 9999px;
 }
+
 .sprite_icon2 {
-  background: url('@/assets/img/sprite_icon2.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon2.png") no-repeat 0 9999px;
 }
+
 .sprite_icon3 {
-  background: url('@/assets/img/sprite_icon3.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon3.png") no-repeat 0 9999px;
 }
+
 .sprite_button {
-  background: url('@/assets/img/sprite_button.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_button.png") no-repeat 0 9999px;
 }
+
 .sprite_button2 {
-  background: url('@/assets/img/sprite_button2.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_button2.png") no-repeat 0 9999px;
 }
+
 .sprite_table {
-  background: url('@/assets/img/sprite_table.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_table.png") no-repeat 0 9999px;
 }
+
 .sprite_playbar {
-  background: url('@/assets/img/playbar_sprite.png') no-repeat 0 9999px;
+  background: url("@/assets/img/playbar_sprite.png") no-repeat 0 9999px;
 }
+
 .sprite_playlist {
-  background: url('@/assets/img/playlist_sprite.png') no-repeat 0 9999px;
+  background: url("@/assets/img/playlist_sprite.png") no-repeat 0 9999px;
 }
+
 .image_cover {
   position: absolute;
   top: 0;
@@ -122,8 +146,9 @@ button {
   bottom: 0;
   left: 0;
   text-indent: -9999px;
-  background: url('../img/sprite_cover.png') no-repeat -145px -57px;
+  background: url("../img/sprite_cover.png") no-repeat -145px -57px;
 }
+
 .ant-message .ant-message-notice-content {
   position: fixed;
   bottom: 60px;
@@ -132,6 +157,7 @@ button {
   background-color: rgb(0 0 0 / 50%);
   transform: translateX(-50%);
 }
+
 span:hover.link {
   text-decoration: underline;
   cursor: pointer;
