--- a/src/components/RcmHeader/index.less
+++ b/src/components/RcmHeader/index.less
@@ -37,6 +37,13 @@
           color: #cccccc;
         }
       }
+
+      .item:last-child {
+        /* stylelint-disable-next-line rule-empty-line-before */
+        .divider {
+          display: none;
+        }
+      }
     }
   }
 
