--- a/src/views/discover/components/recommend/components/hotRecommend/index.less
+++ b/src/views/discover/components/recommend/components/hotRecommend/index.less
@@ -1,5 +1,6 @@
 .HotRecommendWrapper {
-  /* stylelint-disable-next-line rule-empty-line-before */
+  margin-bottom: 30px;
+
   .recommend-list {
     display: flex;
     flex-wrap: wrap;
