--- a/src/views/discover/components/recommend/index.less
+++ b/src/views/discover/components/recommend/index.less
@@ -2,14 +2,10 @@
   .Content {
     display: flex;
     background-color: #ffffff;
+
     .RecommendLeft {
-      width: 60vw !important;
+      width: 100% !important;
       padding: 20px;
-    }
-    .RecommendRight {
-      width: 250px;
-      border: 1px solid #d3d3d3;
-      border-width: 0 1px;
     }
   }
 }
