--- a/src/views/discover/components/recommend/components/banner/index.less
+++ b/src/views/discover/components/recommend/components/banner/index.less
@@ -5,7 +5,7 @@
     justify-content: center;
 
     .BannerContent {
-      width: 100%;
+      max-width: 100%;
 
       .banner-item {
         .image {
@@ -51,30 +51,4 @@
   .right {
     right: -68px;
   }
-}
-
-.ant-carousel .slick-prev,
-.ant-carousel .slick-next,
-.ant-carousel .slick-prev:hover,
-.ant-carousel .slick-next:hover,
-.ant-carousel .slick-prev:focus,
-.ant-carousel .slick-next:focus {
-  font-size: inherit;
-  color: currentcolor !important;
-}
-
-.ant-carousel .slick-prev::before {
-  color: currentcolor !important;
-}
-
-.slick-arrow.slick-prev {
-  font-size: 20px !important;
-}
-
-.ant-carousel .slick-next::before {
-  color: currentcolor !important;
-}
-
-.slick-arrow.slick-next {
-  font-size: 20px !important;
 }
