--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -1,6 +1,10 @@
 .HeaderWrapper {
+  position: relative;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 75px;
+  zoom: 1;
   background-color: #242424;
 
   .content {
