--- a/src/views/discover/index.less
+++ b/src/views/discover/index.less
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 100vw;
+    max-width: 100%;
     height: 30px;
     margin: 0 auto;
     overflow: hidden;
