style: 🎨 修复窗口缩放造成的样式变形

--- a/src/views/discover/index.less
+++ b/src/views/discover/index.less
@@ -15,7 +15,7 @@
       top: -4px;
       display: flex;
       flex-wrap: nowrap;
-      padding-left: 29.5vw;
+      padding-left: 180px;
       font-size: 12px;
       white-space: nowrap;
 
@@ -39,15 +39,8 @@
     }
   }
 }
-
-@media screen and (max-width: 1280px) {
-  .TopMenu {
-    padding-left: 20.7vw !important;
-  }
-}
-
-@media screen and (max-width: 870px) {
-  .TopMenu {
-    padding-left: 0 !important;
+@media screen and (max-width: 900px) {
+  .DiscoverWrapper {
+    width: 1000px !important;
   }
 }
