--- a/src/views/player/PlayerBar/index.less
+++ b/src/views/player/PlayerBar/index.less
@@ -5,8 +5,12 @@
   left: 0;
   z-index: 99;
   height: 52px;
+  zoom: 1;
+  background: #252424;
   background-repeat: repeat;
   background-position: 0 0;
+  border-radius: 5px 5px 0 0;
+  opacity: 0.95;
 
   .content {
     position: absolute;
@@ -74,6 +78,7 @@
         .progress {
           display: flex;
           align-items: center;
+          margin-bottom: 5px;
 
           .ant-slider {
             width: 493px;
