--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -1,16 +1,15 @@
 .HeaderWrapper {
   position: relative;
   top: 0;
+  right: 0;
   left: 0;
-  width: 100%;
   height: 75px;
-  zoom: 1;
   background-color: #242424;
 
   .content {
     display: flex;
-    justify-content: space-between;
-    width: 60%;
+    justify-content: space-evenly;
+    width: 1100px;
     height: 70px;
     margin: 0 auto;
 
@@ -112,81 +111,18 @@
     background-color: #c20c0c;
   }
 }
-
-@media screen and (max-width: 1716px) {
-  .content {
-    width: 75% !important;
-  }
-}
-
-@media screen and (max-width: 1716px) {
-  .content {
-    width: 75% !important;
-  }
-}
-
-@media screen and (max-width: 1300px) {
-  .content {
-    width: 87% !important;
-  }
-}
-
-@media screen and (max-width: 1150px) {
-  .select-item:nth-of-type(5) {
-    display: none !important;
-  }
-
-  .select-item:nth-of-type(6) {
-    display: none !important;
-  }
-}
-
 @media screen and (max-width: 900px) {
-  .select-item:nth-of-type(4) {
-    display: none !important;
-  }
-
-  .select-item:nth-of-type(5) {
-    display: none !important;
-  }
-
-  .select-item:nth-of-type(6) {
-    display: none !important;
+  .HeaderWrapper {
+    width: 1000px !important;
   }
 }
-
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1200px) {
   .content {
+    justify-content: flex-start !important;
     width: 100% !important;
   }
 
-  .center {
-    display: none !important;
-  }
-
-  .search {
-    margin: 0 40px;
-  }
-
-  .login {
-    margin-right: 10px;
-  }
-}
-
-@media screen and (max-width: 633px) {
-  .select-item:nth-of-type(4) {
-    display: none !important;
-  }
-
-  .select-item:nth-of-type(5) {
-    display: none !important;
-  }
-
   .select-item:nth-of-type(6) {
-    display: none !important;
-  }
-
-  .HeaderRight {
     display: none !important;
   }
 }
