--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -68,9 +68,10 @@ img {
 
 /* 全局样式 */
 
-html,body {
+html,
+body {
   word-break: break-word;
-  word-wrap:break-word;
+  word-wrap: break-word;
 }
 
 body,
