--- a/src/views/discover/components/recommend/components/banner/index.less
+++ b/src/views/discover/components/recommend/components/banner/index.less
@@ -5,50 +5,55 @@
     justify-content: center;
 
     .BannerContent {
-      max-width: 100%;
+      width: 100%;
 
       .banner-item {
         .image {
           width: 100%;
-          height: 250px;
+          height: 283px;
           object-fit: contain;
           overflow: hidden;
         }
       }
     }
-  }
-}
 
-.BannerControl {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  transform: translateY(-31.5px);
+    .BannerControl {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      left: 0;
+      transform: translateY(-31.5px);
 
-  .btn {
-    position: absolute;
-    width: 37px;
-    height: 63px;
-    cursor: pointer;
-    background-color: transparent;
+      .btn {
+        position: absolute;
+        width: 37px;
+        height: 63px;
+        cursor: pointer;
+        background-color: transparent;
 
-    &:hover {
-      background-color: rgb(0 0 0 / 10%);
+        &:hover {
+          background-color: rgb(0 0 0 / 10%);
+        }
+      }
+
+      .left,
+      .right {
+        line-height: 63px;
+        text-align: center;
+      }
+
+      .left {
+        left: 0;
+      }
+
+      .right {
+        right: 0;
+      }
     }
   }
-
-  .left,
-  .right {
-    line-height: 63px;
-    text-align: center;
-  }
-
-  .left {
-    left: -68px;
-  }
-
-  .right {
-    right: -68px;
+}
+@media screen and (max-width: 900px) {
+  .BannerWrapper {
+    width: 1000px !important;
   }
 }
