--- a/src/views/discover/index.less
+++ b/src/views/discover/index.less
@@ -15,7 +15,7 @@
       top: -4px;
       display: flex;
       flex-wrap: nowrap;
-      padding-left: 180px;
+      padding-left: 300px;
       font-size: 12px;
       white-space: nowrap;
 
@@ -42,5 +42,9 @@
 @media screen and (max-width: 900px) {
   .DiscoverWrapper {
     width: 1000px !important;
+  }
+
+  .TopMenu {
+    padding-left: 180px !important;
   }
 }
