--- a/src/views/player/PlayerBar/index.less
+++ b/src/views/player/PlayerBar/index.less
@@ -30,6 +30,7 @@
       .next {
         width: 28px;
         height: 28px;
+        cursor: pointer;
       }
 
       .prev {
@@ -40,6 +41,7 @@
         width: 36px;
         height: 36px;
         margin: 0 8px;
+        cursor: pointer;
       }
 
       .next {
@@ -104,6 +106,7 @@
           }
 
           .time {
+            /* stylelint-disable-next-line rule-empty-line-before */
             .now-time {
               color: #e1e1e1;
             }
@@ -124,6 +127,7 @@
       .btn {
         width: 25px;
         height: 25px;
+        cursor: pointer;
       }
 
       .favor {
