--- a/src/components/AlbumCover/index.less
+++ b/src/components/AlbumCover/index.less
@@ -19,9 +19,10 @@
 
   .album-info {
     font-size: 12px;
-    text-align: center;
+    text-align: left;
 
     .name {
+      display: block;
       overflow: hidden;
       color: #000000;
       text-overflow: ellipsis;
@@ -29,6 +30,7 @@
     }
 
     .artist {
+      display: block;
       color: #666666;
     }
   }
