--- a/src/views/player/PlayerBar/index.less
+++ b/src/views/player/PlayerBar/index.less
@@ -35,6 +35,10 @@
 
       .prev {
         background-position: 0 -130px;
+
+        &.prev:hover {
+          background-position: -30px -130px !important;
+        }
       }
 
       .play {
@@ -42,10 +46,18 @@
         height: 36px;
         margin: 0 8px;
         cursor: pointer;
+
+        &.play:hover {
+          background-position: -40px -204px !important;
+        }
       }
 
       .next {
         background-position: -80px -130px;
+
+        &.next:hover {
+          background-position: -110px -130px !important;
+        }
       }
     }
 
@@ -132,10 +144,18 @@
 
       .favor {
         background-position: -88px -163px;
+
+        &.favor:hover {
+          background-position: -88px -189px !important;
+        }
       }
 
       .share {
         background-position: -114px -163px;
+
+        &.share:hover {
+          background-position: -114px -189px !important;
+        }
       }
 
       .right {
@@ -147,6 +167,10 @@
 
         .volume {
           background-position: -2px -248px;
+
+          &.volume:hover {
+            background-position: -31px -248px !important;
+          }
         }
 
         .playlist {
@@ -155,6 +179,10 @@
           color: #cccccc;
           text-align: center;
           background-position: -42px -68px;
+
+          &.playlist:hover {
+            background-position: -42px -98px !important;
+          }
         }
       }
     }
