feat: 🚀 打通播放逻辑

--- a/src/views/player/PlayerBar/index.less
+++ b/src/views/player/PlayerBar/index.less
@@ -46,9 +46,22 @@
         height: 36px;
         margin: 0 8px;
         cursor: pointer;
+        background-position: 0 -204px;
 
         &.play:hover {
           background-position: -40px -204px !important;
+        }
+      }
+
+      .pause {
+        width: 36px;
+        height: 36px;
+        margin: 0 8px;
+        cursor: pointer;
+        background-position: 0 -165px;
+
+        &.pause:hover {
+          background-position: -40px -165px !important;
         }
       }
 
@@ -170,6 +183,30 @@
 
           &.volume:hover {
             background-position: -31px -248px !important;
+          }
+        }
+
+        .loop {
+          background-position: -3px -344px;
+
+          &.loop:hover {
+            background-position: -33px -344px !important;
+          }
+        }
+
+        .shuffle {
+          background-position: -66px -248px;
+
+          &.shuffle:hover {
+            background-position: -93px -248px !important;
+          }
+        }
+
+        .one {
+          background-position: -66px -344px;
+
+          &.one:hover {
+            background-position: -93px -344px !important;
           }
         }
 
