feat: 🚀 完成播放列表面板

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -145,6 +145,10 @@ button {
   background: url("@/assets/img/playlist_sprite.png") no-repeat 0 9999px;
 }
 
+.sprite_player {
+  background: url("@/assets/img/playbar_sprite.png") no-repeat 0 9999px;
+}
+
 .image_cover {
   position: absolute;
   top: 0;
