feat: 🚀 完成部分搜索组件

--- a/src/views/discover/ChildPages/recommend/components/newAlbum/index.less
+++ b/src/views/discover/ChildPages/recommend/components/newAlbum/index.less
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     height: 186px;
-    margin: 20px 0 37px;
+    margin: 20px 0 30px;
     background-color: #f5f5f5;
     border: 1px solid #d3d3d3;
 
@@ -26,6 +26,7 @@
     .album {
       width: 96%;
       height: 150px;
+      padding: 0 30px;
 
       .ant-carousel .slick-slide {
         height: 150px;
