--- a/src/views/player/components/SongItem/index.less
+++ b/src/views/player/components/SongItem/index.less
@@ -4,15 +4,8 @@
   height: 30px;
 
   .song-item {
-    padding: 6px 10px;
     line-height: 18px;
     text-align: left;
-  }
-
-  .rank-count {
-    width: 70px;
-    padding-left: 25px;
-    color: #999999;
   }
 
   .song-info {
@@ -22,6 +15,18 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    .singer-song {
+      .text-nowrap {
+        font-size: 12px;
+        color: #333333 !important;
+      }
+
+      .singer {
+        font-size: 12px;
+        color: #999999 !important;
+      }
+    }
 
     .font-active {
       margin-right: 8px;
