--- a/src/views/player/index.less
+++ b/src/views/player/index.less
@@ -1,6 +1,7 @@
 .PlayerWrapper {
   .content {
     display: flex;
+    padding-top: 20px;
     background: url('@/assets/img/wrap-bg.png') repeat-y;
     background-color: #ffffff;
 
