--- a/src/layouts/components/Header/components/Serarch/index.less
+++ b/src/layouts/components/Header/components/Serarch/index.less
@@ -4,7 +4,7 @@
   /* 搜索框 */
 
   .search {
-    width: 221px;
+    width: 237px;
     height: 32px;
     border-radius: 16px;
 
@@ -83,40 +83,25 @@
       display: flex;
       border: 1px solid rgb(183 183 187);
 
-      .zuo {
-        /* float: left; */
-
-        /* height: 100%; */
-        width: 65px;
-
-        /* border: 1px solid rgb(183, 183, 187); */
-        padding-top: 10px;
-        border-bottom: none;
-
-        .song {
-          margin-left: 28px;
-          color: #cccccc;
-        }
-      }
-
       .main {
         display: inline-block;
         font-size: 13px;
         line-height: 28px;
 
         .item {
-          width: 168px;
+          width: 235px;
           height: 35px;
           overflow: hidden;
           line-height: 35px;
           color: #000000;
+          text-align: center;
           text-indent: 8px;
           text-overflow: ellipsis;
           white-space: nowrap;
           cursor: pointer;
 
           &:hover {
-            color: #2ecc71;
+            color: red;
             background-color: #ecf0f1;
             border-radius: 5%;
           }
