feat: 🚀 完成搜索和歌单

--- a/src/views/discover/ChildPages/recommend/components/banner/index.less
+++ b/src/views/discover/ChildPages/recommend/components/banner/index.less
@@ -28,6 +28,8 @@
         position: absolute;
         width: 37px;
         height: 63px;
+        font-size: 30px;
+        color: #ffffff;
         cursor: pointer;
         background-color: transparent;
 
