--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -102,51 +102,51 @@ button {
 }
 
 .sprite_01 {
-  background: url('@/assets/img/sprite_01.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_01.png") no-repeat 0 9999px;
 }
 
 .sprite_02 {
-  background: url('@/assets/img/sprite_02.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_02.png") no-repeat 0 9999px;
 }
 
 .sprite_cover {
-  background: url('@/assets/img/sprite_cover.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_cover.png") no-repeat 0 9999px;
 }
 
 .sprite_icon {
-  background: url('@/assets/img/sprite_icon.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon.png") no-repeat 0 9999px;
 }
 
 .sprite_icon2 {
-  background: url('@/assets/img/sprite_icon2.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon2.png") no-repeat 0 9999px;
 }
 
 .sprite_icon3 {
-  background: url('@/assets/img/sprite_icon3.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_icon3.png") no-repeat 0 9999px;
 }
 
 .sprite_button {
-  background: url('@/assets/img/sprite_button.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_button.png") no-repeat 0 9999px;
 }
 
 .sprite_button2 {
-  background: url('@/assets/img/sprite_button2.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_button2.png") no-repeat 0 9999px;
 }
 
 .sprite_table {
-  background: url('@/assets/img/sprite_table.png') no-repeat 0 9999px;
+  background: url("@/assets/img/sprite_table.png") no-repeat 0 9999px;
 }
 
 .sprite_playBar {
-  background: url('@/assets/img/playbar_sprite.png') no-repeat 0 9999px;
+  background: url("@/assets/img/playbar_sprite.png") no-repeat 0 9999px;
 }
 
 .sprite_playlist {
-  background: url('@/assets/img/playlist_sprite.png') no-repeat 0 9999px;
+  background: url("@/assets/img/playlist_sprite.png") no-repeat 0 9999px;
 }
 
 .sprite_player {
-  background: url('@/assets/img/playbar_sprite.png') no-repeat 0 9999px;
+  background: url("@/assets/img/playbar_sprite.png") no-repeat 0 9999px;
 }
 
 .image_cover {
@@ -156,7 +156,80 @@ button {
   bottom: 0;
   left: 0;
   text-indent: -9999px;
-  background: url('../img/sprite_cover.png') no-repeat -145px -57px;
+  background: url("@/assets/img/sprite_cover.png") no-repeat -145px -57px;
+}
+
+
+
+.my_music {
+  background: url("@/assets/img/mymusic.png") no-repeat 0 9999px;
+}
+
+.not-login {
+  background: url("@/assets/img/notlogin.jpg") no-repeat 0 9999px;
+}
+
+
+/* .cover_all {
+  background: url(../img/sprite_cover.png) no-repeat  0 9999px;
+  
+} */
+
+.lyric-css .ant-message-notice-content {
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  color: #f5f5f5;
+  background-color: rgb(0 0 0 / 50%);
+  transform: translateX(-50%);
+}
+
+.wrap-bg2 {
+  background: url("@/assets/img/wrap3.png") repeat-y center 0;
+}
+
+.no-link {
+  pointer-events: none;
+}
+
+.m-tab {
+  background: url("@/assets/img/tab.png") no-repeat 0 9999px;
+}
+
+.theme-logo {
+  background: url("@/assets/img/logo.png") repeat 0 9999px;;
+
+  /* background: url(../img/music.svg) repeat 0 9999px;; */
+}
+
+.new-logo {
+  background: url("@/assets/img/music.svg") no-repeat ;
+  background-size: contain;
+}
+
+.date {
+  background: url("@/assets/img/date.png") no-repeat 0 9999px;;
+}
+
+/* .mask{
+  background:url(../img/date2_mask.png) no-repeat 0 9999px;
+} */
+
+.icons {
+  background: url("@/assets/img/icon.png") no-repeat 0 9999px;
+}
+
+main.content {
+  width: 980px;
+  min-height: 700px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  border: 1px solid #d3d3d3;
+  border-width: 0 1px;
+}
+
+.icon-small {
+  background: url("@/assets/img/icon2.png") no-repeat 0 9999px;
 }
 
 .ant-message .ant-message-notice-content {
