--- a/src/components/NavBar/index.less
+++ b/src/components/NavBar/index.less
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
   height: 30px;
   margin: 0 auto;
   overflow: hidden;
@@ -19,6 +18,7 @@
     white-space: nowrap;
 
     .item {
+      /* stylelint-disable-next-line rule-empty-line-before */
       a {
         display: inline-block;
         height: 20px;
@@ -38,11 +38,12 @@
   }
 }
 @media screen and (max-width: 900px) {
+  /* stylelint-disable-next-line rule-empty-line-before */
   .NavBarWrapper {
     width: 1000px !important;
   }
 
   .TopMenu {
-    padding-left: 180px !important;
+    padding-left: 173px !important;
   }
 }
