--- a/src/views/songlist/components/SongListInfo/index.less
+++ b/src/views/songlist/components/SongListInfo/index.less
@@ -61,76 +61,15 @@
         }
       }
 
-      .description-detail {
-        .description-detail {
-          position: relative;
-          max-height: 24.5333vw;
-          overflow: hidden;
-          font-size: 3.2vw;
-          line-height: 6.1333vw;
-          text-align: justify;
-          transition: 0.3s max-height;
-        }
-
-        .description-detail::before {
-          float: right;
-          height: calc(100% - 6vw);
-          content: '';
-        }
-
-        .description-detail::after {
-          position: absolute;
-          width: 999vw;
-          height: 999vw;
-
-          /* opacity: 0.3; */
-          margin-left: -13.3333vw;
-          content: '';
-          box-shadow: inset calc(19vw - 999vw) calc(19vw - 999vw) 0 0 #ffffff;
-        }
-
-        .expand {
-          position: relative;
-          float: right;
-          margin-left: 2.6667vw;
-          clear: both;
-          font-size: 3.2vw;
-          line-height: 6vw;
-        }
-
-        .expand::after {
-          cursor: pointer;
-          content: '展开';
-        }
-
-        .expand-checkbox {
-          display: none;
-        }
-
-        .expand-checkbox:checked + .description-detail {
-          max-height: none;
-        }
-
-        .expand-checkbox:checked + .description-detail::after {
-          visibility: hidden;
-        }
-
-        .expand-checkbox:checked + .description-detail .expand::before {
-          /* visibility: hidden; */
-          display: none;
-        }
-
-        .expand-checkbox:checked + .description-detail .expand::after {
-          cursor: pointer;
-          content: '收起';
-        }
-
-        .expand::before {
-          position: absolute;
-          left: -0.2667vw;
-          color: #000000;
-          content: '...';
-          transform: translateX(-100%);
+      .description-info {
+        .description-details {
+          summary {
+            display: -webkit-box;
+            overflow: hidden;
+            word-break: break-all;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+          }
         }
       }
     }
