--- a/src/views/user/index.less
+++ b/src/views/user/index.less
@@ -6,6 +6,7 @@
   }
 
   .user-info {
+
     .user-pic {
       margin-right: 40px;
 
@@ -37,7 +38,7 @@
           display: flex;
           display: inline-block;
           height: 19px;
-          padding-left: 29px;
+          padding: 0 5px;
           margin: 3px 5px 0 10px;
           overflow: hidden;
           font-size: 14px;
@@ -47,15 +48,6 @@
           color: #e03a24;
           vertical-align: middle;
           background-position: -135px -190px;
-
-          i {
-            display: inline-block;
-            width: 9px;
-            height: 19px;
-            overflow: hidden;
-            vertical-align: middle;
-            background-position: -191px -190px;
-          }
         }
 
         .gender-icon {
@@ -110,6 +102,7 @@
     }
 
     .creator {
+
       &:hover {
         text-decoration: underline;
         cursor: pointer;
