--- a/src/components/PlayList/index.less
+++ b/src/components/PlayList/index.less
@@ -25,11 +25,16 @@
 
       &.header-singer {
         flex: 1;
+        border-right: 1px solid #dadada;
       }
 
       &.header-time {
         width: 91px;
         border-right: 1px solid #dadada;
+      }
+
+      &.header-album {
+        width: 210px;
       }
     }
   }
