feat: 🚀 新增歌手详情页

--- a/src/components/PlayList/components/PlayListItem/index.less
+++ b/src/components/PlayList/components/PlayListItem/index.less
@@ -63,5 +63,10 @@
 
   .album {
     width: 210px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    word-wrap: break-word;
+    white-space: nowrap;
   }
 }
