--- a/src/views/search/index.less
+++ b/src/views/search/index.less
@@ -44,6 +44,10 @@
         border-top: 2px solid #d13030;
       }
 
+      .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab + .ant-tabs-tab {
+        margin-left: 0;
+      }
+
       .card-container > .ant-tabs-card .ant-tabs-tab,
       [data-theme='compact'] .card-container > .ant-tabs-card .ant-tabs-tab {
         display: flex;
