--- a/src/views/artist/index.less
+++ b/src/views/artist/index.less
@@ -65,7 +65,7 @@
       [data-theme='compact'] .card-container > .ant-tabs-card .ant-tabs-tab {
         display: flex;
         justify-content: center;
-        width: 198px;
+        width: 220px;
         background: #f5f5f5;
         border-color: transparent;
       }
@@ -99,7 +99,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         margin-top: 20px;
 
         .albumItem {
