chore: 🔨 切换到swc，增加自动导入

--- a/src/layouts/components/Footer/index.less
+++ b/src/layouts/components/Footer/index.less
@@ -9,10 +9,11 @@
   .content {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center !important;
   }
 
   .link {
+
     a {
       color: #999999;
     }
@@ -24,6 +25,7 @@
   }
 
   .copyright {
+
     span {
       margin-right: 15px;
     }
@@ -38,6 +40,7 @@
     }
 
     .link {
+
       .line {
         margin: 0 10px;
         color: #999999;
@@ -45,6 +48,7 @@
     }
 
     .copyright {
+
       span {
         margin-right: 15px;
       }
